--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h4>*Todo lo que dijo en la entrevita es genuina*</h4>
                 </span>
             </aside>
-          <article>  <section class="info-card2"> 
+          <article>  <section class="info-card2">   <h3 class="info-title">Entrevista sobre la educacion</h3>
              <p>Se entrevistó a un profesor del Arturo Matte Larraín con 4 años de experiencia en la área educativa, explicando su experiencia como profesor como “una experiencia entretenida que pudo aprender en el proceso con sus colegas y estudiantes”
 pero el dio respondió las siguientes preguntas;</p>
 
