--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
 
     <nav class="problems" role="navigation" aria-label="Secciones">
-        <a class="nav-item" href="#">Problemas medio ambientales</a>
-        <a class="nav-item" href="#">Desigualdad</a>
+        <a class="nav-item" href="https://m4tispto.github.io/Pag-web-Chile-y-LATAM/">Problemas medio ambientales</a>
+        <a class="nav-item" href="https://vientoselaleatorio.github.io/chile-y-latam/">Desigualdad</a>
         <a class="nav-item" href="#">Problemas de educación</a>
     </nav>
 
@@ -64,7 +64,7 @@
                  <span>
                     <h3>Jorge Perez</h3>
                 </span><span>
-                    <h4>*Todo lo que dijo en la entrevita es genuina*</h4>
+                    <h4>*Todo lo que dijo en la entrevista es genuina*</h4>
                 </span>
             </aside>
           <article>  <section class="info-card2">   <h3 class="info-title">Entrevista sobre la educacion</h3>
